--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/Pavel-Ch-L/RestApiApp#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.20.1"
   },
